# ai-multi-agent-release-notes-generator

./: .env.example  README.md  generate_release_notes.sh  pyproject.toml  release_notes.txt  requirements.txt
.github/workflows/: generate-release-notes.yml
samples/: commits.txt  pr.txt  release_notes.txt
src/multi_agent_release_notes/: generator.py  github_client.py  llm_client.py  main.py
tests/: test_github_client.py  test_llm_client.py
